// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqEventDefinitionStructuredList should render event definition info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_event_definition_info"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Event Group",
            "value": "bar",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Attached to Policy",
            "value": "policy description",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqEventDefinitionStructuredList should render event definition policy structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_event_definition_policy"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title="View this Model Alert"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Policy description",
              },
            ],
            "onclick": "DoNav('/miq_policy/show/1');",
            "title": "View this Model Alert",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;
